Crash when typing certain keys in search bar #74838

Closed
opened 2020-03-17 06:38:05 +01:00 by Rahul Chaudhary · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5100

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Broken: version: 2.82a, 2.83 latest experimental build.
Worked: 2.80, 2.81, 2.81a.

Short description of error
Typing "sy" (for symmetry) on the search bar when the viewport is empty crashes blender. Blender still crashes when there are lights and cameras visible but doesnt crash if one of the other object type is visible.

Exact steps for others to reproduce the error

  1. Open blender
  2. Hide or delete all the objects, so the viewport is empty
  3. Open search bar
  4. Type sy

Works with default startup file
blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5100 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Broken: version: 2.82a, 2.83 latest experimental build. Worked: 2.80, 2.81, 2.81a. **Short description of error** Typing "sy" (for symmetry) on the search bar when the viewport is empty crashes blender. Blender still crashes when there are lights and cameras visible but doesnt crash if one of the other object type is visible. **Exact steps for others to reproduce the error** 1. Open blender 2. Hide or delete all the objects, so the viewport is empty 3. Open search bar 4. Type sy Works with default startup file [blender_debug_output.txt](https://archive.blender.org/developer/F8411553/blender_debug_output.txt)

Added subscriber: @RC12

Added subscriber: @RC12
Rahul Chaudhary changed title from Crash when typing certain keys in search to Crash when typing certain keys in search bar 2020-03-17 06:43:50 +01:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Which search bar ?

Which search bar ?

The search function F3 or space

The search function F3 or space
Member

operator search, yeah. Confirmed.

operator search, yeah. Confirmed.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member
- 0	0x00000001009a0e0f in sculpt_no_multires_poll ()
- 1	0x0000000100a5f75b in operator_search_cb ()
- 2	0x0000000100a51e3c in ui_searchbox_update ()
- 3	0x0000000100a294bb in ui_do_but_textedit ()
- 4	0x0000000100a28c05 in ui_do_but_TEX ()
- 5	0x0000000100a1da2f in ui_do_button ()
- 6	0x0000000100a27620 in ui_handle_button_event ()
- 7	0x0000000100a27c8c in ui_handle_menu_button ()
- 8	0x0000000100a2486f in ui_handle_menus_recursive ()
- 9	0x0000000100a23789 in ui_popup_handler ()
- 10	0x0000000100386494 in wm_handlers_do_intern ()
- 11	0x0000000100381dff in wm_handlers_do ()
- 12	0x000000010038111f in wm_event_do_handlers ()
- 13	0x000000010037ad10 in WM_main ()
- 14	0x000000010014a22b in main ()
- 15	0x00007fff6ec663d5 in start ()

Just went over 6-7 similar posts in the past. So confirming.

``` - 0 0x00000001009a0e0f in sculpt_no_multires_poll () - 1 0x0000000100a5f75b in operator_search_cb () - 2 0x0000000100a51e3c in ui_searchbox_update () - 3 0x0000000100a294bb in ui_do_but_textedit () - 4 0x0000000100a28c05 in ui_do_but_TEX () - 5 0x0000000100a1da2f in ui_do_button () - 6 0x0000000100a27620 in ui_handle_button_event () - 7 0x0000000100a27c8c in ui_handle_menu_button () - 8 0x0000000100a2486f in ui_handle_menus_recursive () - 9 0x0000000100a23789 in ui_popup_handler () - 10 0x0000000100386494 in wm_handlers_do_intern () - 11 0x0000000100381dff in wm_handlers_do () - 12 0x000000010038111f in wm_event_do_handlers () - 13 0x000000010037ad10 in WM_main () - 14 0x000000010014a22b in main () - 15 0x00007fff6ec663d5 in start () ``` Just went over 6-7 similar posts in the past. So confirming.

Added subscriber: @rjg

Added subscriber: @rjg

sculpt_no_multires_poll() should check SCULPT_mode_poll() first and short-circuit if it returns false. It has to be ensured that ob isn't NULL when attempting to dereference it.

`sculpt_no_multires_poll()` should check `SCULPT_mode_poll()` first and short-circuit if it returns false. It has to be ensured that `ob` isn't `NULL` when attempting to dereference it.
Robert Guetzkow self-assigned this 2020-03-17 12:10:39 +01:00

This issue was referenced by d374237d43

This issue was referenced by d374237d43728ddc8503629cf1018befba82b81b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74838
No description provided.